fix: Gallery does now display NSFW images blurred.

--- a/st/css/kyselo/kyselo.css
+++ b/st/css/kyselo/kyselo.css
@@ -149,7 +149,7 @@ hr.kyselo-tabs-base {
 
 
 /* cenzura NSFW obrázků */
-.kyselo-hide-nsfw .is-nsfw .kyselo-post-body img {
+.kyselo-hide-nsfw .is-nsfw .kyselo-post-body img, .kyselo-hide-nsfw .kyselo-gallery img.is-nsfw {
 	background-color: lightgrey;
 	filter: blur(10px) sepia(1) opacity(0.3);
 	-webkit-filter: blur(10px) sepia(1) opacity(0.3);
